objects/Roof_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Roof Details</relationshipLabel>
        <relationshipName>Roof_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anchoring_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Anchoring Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apr__c</fullName>
        <label>Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <label>Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color_sealing_tape_Mageflex__c</fullName>
        <label>Color sealing tape Mageflex</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <label>Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Helix Design Request-Commercial project</description>
        <label>Design</label>
        <referenceTo>Design__c</referenceTo>
        <relationshipLabel>Roof Details</relationshipLabel>
        <relationshipName>Roof_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Azimuth (in º)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <label>Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Air_Barrier__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Functional Air Barrier</label>
        <picklist>
            <picklistValues>
                <fullName>Monlithic Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vapor or Air Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Existing Roof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Height of Roof</description>
        <label>Building Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Count__c</fullName>
        <label>Inverter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Inverter List. Determines which Inverter is this Roof Detail(Array) is linked to.</description>
        <label>Inverter List</label>
        <referenceTo>InverterList__c</referenceTo>
        <relationshipLabel>Roof Details</relationshipLabel>
        <relationshipName>Roof_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Non Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Model__c</fullName>
        <label>Inverter Model</label>
        <picklist>
            <picklistValues>
                <fullName>7.0kW (Model PVI-6000-OUTD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.0kW (Model PVI-6000-OUTD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <label>Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <label>Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <label>Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <label>Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Brand__c</fullName>
        <description>Project: GPP 
Description: Related  Module Brand</description>
        <label>Module Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Oracle_Item_Number__c</fullName>
        <description>Project: GPP 
Description: Module Oracle Item Number</description>
        <label>Module Oracle Item Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Quantity__c</fullName>
        <description>Project: GPP 
Description: Related Modules quantity</description>
        <label>Module Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>Project: GPP 
Description: Related Module</description>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modules_per_strings__c</fullName>
        <label>Modules per strings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <label>Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Modules_MPP1__c</fullName>
        <description>Solar Access % of Roof in Specified Month</description>
        <label>Number Of Modules (MPP1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Modules_MPP2__c</fullName>
        <description>Solar Access % of Roof in Specified Month</description>
        <label>Number Of Modules (MPP2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Strings_MPP1__c</fullName>
        <description>Solar Access % of Roof in Specified Month</description>
        <label>Number Of Strings (MPP1)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Strings_MPP2__c</fullName>
        <description>Solar Access % of Roof in Specified Month</description>
        <label>Number Of Strings (MPP2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <label>Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parapet_Wall_Height__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Parapet Wall Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch</label>
        <picklist>
            <picklistValues>
                <fullName>Horiz.(0)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:12(5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:12(9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:12(14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:12(18)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:12(23)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6:12(27)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:12(30)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:12(34)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:12(37)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:12(40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:12(43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:12(45)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <label>Quote Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SD: Created for TPO Australia. This field is created to establish the relationship  between roof details and quote.Roof Details has 4 lookups to quote which will not support many roofs concept for Australia.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Roof Details</relationshipLabel>
        <relationshipName>Roof_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFD_mandateFields__c</fullName>
        <formula>IF(ISPICKVAL( Roof_Type__c , &apos;&apos;), &apos;Roof Details@!Roof Type@@&apos;, &apos;&apos;) &amp; IF(  TEXT(Shading_Measurement_Date__c) == &apos;&apos;,&apos;Roof Details@!Shading Measurement Date@@&apos;, &apos;&apos;) &amp; IF(ISPICKVAL(Pitch__c , &apos;&apos;), &apos;Roof Details@&apos;+ Name +&apos; # Pitch@@&apos;,&apos;&apos;) 
&amp; IF(Text(Direction__c) == &apos;&apos; , &apos;Roof Details@&apos;+ Name +&apos; # Azimuth@@&apos;, &apos;&apos;) &amp; IF( Text(Roof_Height_M_FR__c) == &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # Roof Height (M)@@&apos;, &apos;&apos;) &amp; IF(TEXT(  Jan__c) == &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # JAN@@&apos;, &apos;&apos;)&amp; IF(TEXT(Feb__c) == &apos;&apos; , &apos;Roof Details@&apos;+ Name +&apos; # FEB@@&apos;, &apos;&apos;)&amp; IF(TEXT(Mar__c )== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # MAR@@&apos;, &apos;&apos;)&amp; IF(  TEXT( Apr__c)== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # APR@@&apos;, &apos;&apos;)&amp; IF(TEXT( May__c )== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # MAY@@&apos;, &apos;&apos;)&amp; IF(TEXT( Jun__c)== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # JUN@@&apos;, &apos;&apos;)&amp; IF(  TEXT(Jul__c )== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # JUL@@&apos;, &apos;&apos;)&amp; IF(TEXT(Aug__c) == &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # Aug@@&apos;, &apos;&apos;)&amp; IF(TEXT(Sep__c )== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # SEP@@&apos;, &apos;&apos;)&amp; IF(TEXT(Oct__c)   == &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # OCT@@&apos;, &apos;&apos;)&amp; IF(TEXT(Nov__c ) == &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # NOV@@&apos;, &apos;&apos;)&amp; IF(TEXT( Dec__c )== &apos;&apos;, &apos;Roof Details@&apos;+ Name +&apos; # DEC@@&apos;, &apos;&apos;)</formula>
        <label>RFD_mandateFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Name__c</fullName>
        <description>Project: GPP
Description:Racking Name</description>
        <label>Racking Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Racking_Quantity__c</fullName>
        <label>Racking Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management 
Requester: Priti Rastogi 
This field is programmatically populated when a quote is connected to a residential project</description>
        <inlineHelpText>Related residential project</inlineHelpText>
        <label>Residential Project</label>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Roof Details</relationshipLabel>
        <relationshipName>Roof_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rfd_ReqFields__c</fullName>
        <formula>IF(ISPICKVAL( Roof_Type__c , &apos;&apos;), &apos;Roof Type&apos;, &apos;&apos;) &amp; IF(TEXT(Shading_Measurement_Date__c) == &apos;&apos;,&apos;Shading Measurement Date&apos;, &apos;&apos;) &amp; IF(ISPICKVAL(Pitch__c , &apos;&apos;), &apos;Pitch&apos;,&apos;&apos;) 
&amp; IF(Text(Direction__c) == &apos;&apos; , &apos;Azimuth&apos;, &apos;&apos;) &amp; IF( Text(Roof_Height_M_FR__c) == &apos;&apos;, &apos;Roof Height (M)&apos;, &apos;&apos;) &amp; IF(TEXT( Jan__c) == &apos;&apos;, &apos;JAN&apos;, &apos;&apos;)&amp; IF(TEXT(Feb__c) == &apos;&apos; , &apos;FEB&apos;, &apos;&apos;)&amp; IF(TEXT(Mar__c )== &apos;&apos;, &apos;MAR&apos;, &apos;&apos;)&amp; IF( TEXT( Apr__c)== &apos;&apos;, &apos;APR&apos;, &apos;&apos;)&amp; IF(TEXT( May__c )== &apos;&apos;, &apos;MAY&apos;, &apos;&apos;)&amp; IF(TEXT( Jun__c)== &apos;&apos;, &apos;JUN&apos;, &apos;&apos;)&amp; IF( TEXT(Jul__c )== &apos;&apos;, &apos;JUL&apos;, &apos;&apos;)&amp; IF(TEXT(Aug__c) == &apos;&apos;, &apos;Aug&apos;, &apos;&apos;)&amp; IF(TEXT(Sep__c )== &apos;&apos;, &apos;SEP&apos;, &apos;&apos;)&amp; IF(TEXT(Oct__c) == &apos;&apos;, &apos;OCT&apos;, &apos;&apos;)&amp; IF(TEXT(Nov__c ) == &apos;&apos;, &apos;NOV&apos;, &apos;&apos;)&amp; IF(TEXT( Dec__c )== &apos;&apos;, &apos;DEC&apos;, &apos;&apos;)</formula>
        <label>Rfd_ReqFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roof1_Accepte4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof1_Accepte4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof1_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof1_Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof2_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof2_Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof3_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof3_Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Construction__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Roof Construction</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reroof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Roof Design</label>
        <referenceTo>Roof_Design__c</referenceTo>
        <relationshipLabel>Roof Details</relationshipLabel>
        <relationshipName>Roof_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roof_Height_M_FR__c</fullName>
        <label>Roof Height (M)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_ID__c</fullName>
        <description>Commercial:
Field added to provide a usable, customer facing, unique roof identifier. Part of Helix Design Request
WW50
PO: Miltos Vratimos</description>
        <displayFormat>R-{00000}</displayFormat>
        <label>Roof ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Roof_Inverter_Values__c</fullName>
        <description>Project: GPP
Description: Rollup concatenation of all Inverters for Roof (Manufacturer-Model(Quantity)</description>
        <label>Roof Inverter Values</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roof_Load_Limit_Amount_psf__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Roof Load Limit Amount (psf)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Membrane__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Roof Membrane</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Adhered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanically Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballasted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Pitches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roof Pitches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roof_Slope__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Roof Slope (degrees)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Built Up Roofing (BUR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Bitumen (Mod-Bit)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Ply Membrane - TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Ply Membrane - PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Ply Membrane - Hypalon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Ply Membrane - EPDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMR (T.Clear LightGuard Panels or Pavers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMR or IRMA Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyurethane Foam (PUF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sep__c</fullName>
        <label>Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shading_Measurement_Date__c</fullName>
        <label>Shading Measurement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shading_Notes__c</fullName>
        <label>Shading Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shading_Preset__c</fullName>
        <label>Shading Preset</label>
        <picklist>
            <picklistValues>
                <fullName>Measured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Typical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shoreline_Length_L2__c</fullName>
        <label>Shoreline Length (L2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snow_Load__c</fullName>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>Snow Load (psf)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surface_of_the_PV_field_Columns__c</fullName>
        <label>Surface of the PV field  Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surface_of_the_PV_field_Rows__c</fullName>
        <label>Surface of the PV field Rows</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surface_of_the_roof_Length_crawling_L1__c</fullName>
        <label>Surface of the roof Length crawling(L1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Price__c</fullName>
        <label>System Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TSRF__c</fullName>
        <description>Total Solar Resource Fraction value coming from Aurora</description>
        <label>TSRF</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_parallel_strings__c</fullName>
        <label>Total parallel strings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Roof</description>
        <inlineHelpText>Roof Type</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>With_Roof_Load_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commercial:
Field added to record information from Helix Design Request information forms
Rel WW45 - 2016
PO: Miltos Vratimos</description>
        <label>With Roof Load Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Without_flashings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Without flashings</label>
        <type>Checkbox</type>
    </fields>
    <label>Roof Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Roof Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roof Details</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Roof_Details</fullName>
        <active>true</active>
        <description>This record type used for Commercial project.</description>
        <label>Commercial Roof Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>FR_Roof_Details</fullName>
        <active>true</active>
        <label>FR Roof Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>MaxFit</fullName>
        <active>true</active>
        <description>MaxFit Roof Details for MaxFit Roof Desgin coming from Aurora</description>
        <label>MaxFit</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_Roof_Details</fullName>
        <active>true</active>
        <label>NA Roof Details</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Roof_Direction_Mandaory</fullName>
        <active>true</active>
        <description>to check roof direction is mandatory</description>
        <errorConditionFormula>and(if(ISNULL(Direction__c) , True ,False ), Account__r.BillingCountry = &apos;France&apos;)</errorConditionFormula>
        <errorMessage>Azimuth: Vous devez saisir une valeur</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Roof_Height_Mandatory</fullName>
        <active>true</active>
        <description>to check the mandatory field for roof height</description>
        <errorConditionFormula>and(if(ISNULL(Roof_Height_M_FR__c) , True ,False ), Account__r.BillingCountry = &apos;France&apos;)</errorConditionFormula>
        <errorMessage>Hauteur du toit: Vous devez saisir une valeur</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Roof_Height_Validation</fullName>
        <active>true</active>
        <description>Roof Height should be between 2m and 8m</description>
        <errorConditionFormula>and (If (Roof_Height_M_FR__c &lt; 2  || Roof_Height_M_FR__c &gt; 8, True ,False ), Account__r.BillingCountry = &apos;France&apos;)</errorConditionFormula>
        <errorMessage>Hauteur de toit que vous avez entré n&apos;est pas dans autorisées range.Roof Hauteur limites admissibles est comprise entre 2 m et 8m.Please re entrer la hauteur du toit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shading_Measurement_Date_validation</fullName>
        <active>true</active>
        <description>Shading measurement date should not accept future dates</description>
        <errorConditionFormula>AND(Shading_Measurement_Date__c  &gt;  TODAY(), Account__r.BillingCountry =&apos;France&apos;)</errorConditionFormula>
        <errorDisplayField>Shading_Measurement_Date__c</errorDisplayField>
        <errorMessage>Veuillez saisir une date valide. Ne peut pas être une date future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Solar_Access_Month_Validation</fullName>
        <active>true</active>
        <description>Solar Access Month Validation</description>
        <errorConditionFormula>and(If (Jan__c &lt; 0 || Jan__c &gt; 100,true, If(Feb__c &lt; 0 || Feb__c &gt; 100,true,If(Mar__c &lt; 0 || Mar__c &gt; 100,true,if(Apr__c &lt; 0 || Apr__c &gt; 100,true,if(May__c &lt; 0 || May__c &gt; 100,true, if(Jun__c &lt; 0 || Jun__c &gt; 100,true, if(Jul__c &lt; 0 || Jul__c &gt; 100,true,if(Aug__c &lt; 0 || Aug__c &gt; 100,true, if(Sep__c &lt; 0 || Sep__c &gt; 100,true, if(Oct__c &lt; 0 || Oct__c &gt; 100,true,if(Nov__c &lt; 0 || Nov__c &gt; 100,true,if(Dec__c &lt; 0 || Dec__c &gt; 100, true , false) ))))))))))),Account__r.BillingCountry = &apos;France&apos;)</errorConditionFormula>
        <errorMessage>Accès solaire valeur du mois saisi n&apos;est pas dans les limites permises range.Allowable est comprise entre 0 et 100.Please re entrer.</errorMessage>
    </validationRules>
</CustomObject>